backend adelantado en peticiones y relaciones

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.3.0"
   }
 }
