--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   },
