--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
