--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.1",
+    "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
