--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.21.0",
@@ -31,7 +32,8 @@
     "redux": "^4.1.2",
     "redux-devtools": "^3.7.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
