--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-react": "^26.2.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
